samples/_failures_safe/1761598207_c05307_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_87c78e27.c: In function ‘main’:
./samples/SAFE/__tmp_87c78e27.c:150:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  150 |     char* names[]
      |     ^~~~
./samples/SAFE/__tmp_87c78e27.c:150:5: error: expected declaration or statement at end of input
